# book-pdf-converter

./: .gitignore  README.ja.md  README.md  pyproject.toml  requirements.txt  setup.py
converter/: __init__.py  __main__.py  cli.py  cli_batch.py  cli_jpeg.py  enhancer.py  image_processing.py  image_processing_cy.c  image_processing_cy.pyx  ocr.py  pdf_reader.py  pdf_writer.py  pipeline.py
converter/models/: .gitkeep  __init__.py
scripts/: setup_model.py
